Added forward with one general and one forward specific validation rule. Updated tests.